tests/examples/failing/Deprecation.hs.bad

module Deprecation
{-# Deprecated ["This is a module \"deprecation\"",
             "multi-line",
             "with unicode: Fr\232re" ] #-}
   ( foo )
 where

{-# DEPRECATEd   foo
         ["This is a multi-line",
          "deprecation message",
          "for foo"] #-}
foo :: Int
foo = 4

{-# DEPRECATED withBool        "The C2HS module will soon stop providing unnecessary\nutility functions. Please use standard FFI library functions instead." #-}
